# elc-hackathon

./: .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  skin_tone.py
.github/workflows/: main_elc-hackathon.yml  main_elchack.yml
backend/: settings.py  skin_tone.py  urls.py
backend_app/: forms.py  skin_tone.py  views.py
chatbot/: index.html  script.js  style.css
html-elchack/: Beauty.html  clinque.html  color.html  index.html  results.html
html-elchack 2/: clinque.html  index.html  results.html
html-elchack 2/assets/css/: noscript.css
poetry/: pyproject.toml
public/: index.html
public/static/: main.css
src/: App.css  App.js  index.js
src/Components/: BeautyLabGrid.js  Camera.js  CardModal.js  Chat.js  ChatModal.js  ColorModal.js  Footer.js  Header.js  Loading.js  LoginComponent.js  Modal.js  ProductCamera.js  ProductResultsModal.js  Router.js  ScanModal.js  SkinResultsGrid.js
src/Pages/: Beauty.js  Color.js  Login.js
