[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["dchaebae <dkchae@princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
imutils = "^0.5.4"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
Pillow = "^8.4.0"
opencv-contrib-python-headless = "3.4.15.55"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
