[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["dchaebae <dkchae@princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
opencv-python = "^4.5.3"
sklearn = "^0.0"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
